storage/innobase/srv/srv0srv.cc
@@ -1283,7 +1283,7 @@ srv_printf_innodb_monitor(
 		ut_total_allocated_memory,
 		mem_pool_get_reserved(mem_comm_pool));
 	fprintf(file, "Dictionary memory allocated " ULINTPF "\n",
-		dict_sys->size);
+		dict_sys_get_size());
 
 	buf_print_io(file);
 
